examples/logfiles/optimization_log_20250714_152911.txt
=== Optimization started at 2025-07-14 15:29:11.915926 ===

Starting configurable BPSO optimization with parameters:
Frequency: 28 GHz
Bandwidth: 16 GHz
Unit cell size: 3 mm
Substrate thickness: 0.8 mm
Pixel grid: 12×12
MSE threshold: 1e-07
Transfer function: 1 - exp(-k*|v|/2)

Iter | Best f(x) | Mean f(x) | Stall | Inertia | Diversity
----------------------------------------------------------
Clearing COM object cache...
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: (-2147352567, 'Exception occurred.', (0, 'CST MICROWAVE STUDIO 2024', 'Saving of C:/Users/IDARE_ECE/Documents/saved_cst_projects2/filtermetasurface2.cst failed.', None, 0, -2147418113), None)
CST file closed
Clearing COM object cache...
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: (-2147352567, 'Exception occurred.', (0, 'CST MICROWAVE STUDIO 2024', 'Saving of C:/Users/IDARE_ECE/Documents/saved_cst_projects2/filtermetasurface2.cst failed.', None, 0, -2147418113), None)
CST file closed
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
CST file closed
COM cache refreshed successfully
Traceback (most recent call last):
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 1178, in <module>
    results = pyoptimize_te(inputparameters)
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 1114, in pyoptimize_te
    optimizer = ConfigurableBPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 620, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 663, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 672, in _evaluate_swarm
    fitness = self.fun(x)
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 492, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 407, in calculate_pcr
    myCST.Build.Shape.addBrick(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^
        xMin=float(Xblock[0]), xMax=float(Xblock[1]),
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        name=name, component="component1", material="PEC"
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\IDARE_ECE\cst-python-api\cst_python_api\Shape.py", line 127, in addBrick
    result = self.__MWS.AddToHistory("define brick: " + name, vba)
  File "<COMObject NewMWS>", line 2, in AddToHistory
KeyboardInterrupt
Traceback (most recent call last):
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 1178, in <module>
    results = pyoptimize_te(inputparameters)
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 1114, in pyoptimize_te
    optimizer = ConfigurableBPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 620, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 663, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 672, in _evaluate_swarm
    fitness = self.fun(x)
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 492, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\IDARE_ECE\cst-python-api\examples\VPSO_POLINS_LD_datasetgeneration_2.py", line 407, in calculate_pcr
    myCST.Build.Shape.addBrick(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^
        xMin=float(Xblock[0]), xMax=float(Xblock[1]),
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        name=name, component="component1", material="PEC"
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\IDARE_ECE\cst-python-api\cst_python_api\Shape.py", line 127, in addBrick
    result = self.__MWS.AddToHistory("define brick: " + name, vba)
  File "<COMObject NewMWS>", line 2, in AddToHistory
KeyboardInterrupt
